--- a/app/views/reports/customer.html.erb
+++ b/app/views/reports/customer.html.erb
@@ -26,7 +26,7 @@
 
 
 <br><br>
-<h3>Internal</h3>
+<h3>Not Billable</h3>
 
 <div id="internal_content">
   <%= render :partial => 'customer_content', :locals => { :project_hours => @internal_project_hours} %>
