--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -17,43 +17,13 @@
 <h4 class=""><%= @period.month_name -%></h4>
 
 <div class="calender_activities">
+
   <table style="border-collapse: collapse;">
-    <% sum = 0 %>
-    <% @activities_summary[:billable].each do |entry| %>
-      <tr>
-        <td><%= entry[:name] -%></td>
-        <td style="text-align:right"><%= entry[:hours] -%></td>
-        <% sum += entry[:hours] %>
-      </tr>
-    <% end %>
-    <tr>
-      <th class="overline">
-        Total:
-      </th>
-      <th class="overline" style="text-align:right; min-width:3em;">
-        <%= sum -%>
-      </th>
-    </tr>
-
+    <%=  activities_list( @activities_summary[:billable] ) %>
     <tr><td>&nbsp;</td></tr>
-    <% sum = 0 %>
-    <% @activities_summary[:unbillable].each do |entry| %>
-      <tr>
-        <td><%= entry[:name] -%></td>
-        <td style="text-align:right"><%= entry[:hours] -%></td>
-        <% sum += entry[:hours] %>
-      </tr>
-    <% end %>
-
-    <tr>
-      <td class="overline">
-        <b>Total:</b>
-      </td>
-      <td class="overline" style="text-align:right; min-width:3em;">
-        <b> <%= sum -%></b>
-      </td>
-    </tr>
+    <%=  activities_list( @activities_summary[:unbillable] ) %>
   </table>
+
   <br/><br/>
   <div style="text-align:right"><%= link_to 'View details', user_month_review_path(@user, :id => :listing, :calendar => @beginning_of_month) %> </div>
   <br/>
