--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -62,6 +62,15 @@ tr .underline {
     border-width: 1px
 }
 
+tr.odd {
+    background-color: rgb(221, 221, 221);
+}
+
+tr.highlight {
+    background-color: rgb(187, 204, 255);
+}
+
+
 h3.compact {
     margin-bottom:6px;
     margin-top:10px
@@ -181,10 +190,15 @@ table.compact tbody tr td, table.compact tbody tr th  {
         padding-right: 0px;
 }
 
+table.vacation {
+        border-collapse: collapse;
+}
+
 table.vacation tbody tr td, table.vacation tbody tr th  {
         padding-right: 0px;
         text-align: center;
 }
+
 table.vacation tbody tr td.user  {
         text-align: left;
 }
