--- a/app/views/reports/details.html.erb
+++ b/app/views/reports/details.html.erb
@@ -11,12 +11,11 @@
   <tr><td>Customer </td><td><b><%= @project.customer.name %></b></td></tr>
 </table>
 <br/>
-<% time_entries = TimeEntry.for_user(@user).for_project(@project).between(@day, @day.at_end_of_month).sort %>
 
 <table width="100%" class="regular">
   <tr><th>Date</th><th>Activity</th><th>Type</th><th>Status</th><th style="text-align:right">Hours</th><th>Notes</th></tr>
   <% total = 0 %>
-  <% time_entries.each do |e|%>
+  <% @time_entries.each do |e|%>
     <tr>
       <td><%= e.date %></td>
       <td><%= e.activity.name %></td>
