--- a/app/views/vacations/edit.html.erb
+++ b/app/views/vacations/edit.html.erb
@@ -32,7 +32,7 @@
 						<%= check_box_tag_unless_holiday_or_weekend(d) %>
 					</td>
 				<% end %>
-				<td style="background-color:white">
+				<td style="background-color:white;padding-left:10px;">
 					<%= hidden_field_tag 'start_of_month', @day %>
 					<%= hidden_field_tag 'user_id', @current_user.id %>
 					<%= submit_tag 'Update' %>
