Made billing degree in month review apply to registered period, and encapsulated in a fieldset + styling

--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -73,13 +73,20 @@
   </div>
 </div>
 
-
-<p>
-  Balance:  <%= balance(@period) %>
-</p>
-<p>
-  Billing degree: <%= (@period.billing_degree * 100).round %> %
-</p>
+<br />
+<fieldset>
+  <legend>
+    Statistics - <%= @period.balance_workdays ? "First #{@period.balance_workdays} working days" : @period.month_name  %>
+  </legend>
+  <p>
+    <label class="info">Balance</label>
+    <span class="<%=case @period.balance when (0..9999) then "ok" when (-9999..0) then "red" end -%>">
+    <%= "%+.1f" % @period.balance -%> </span> hours
+  </p>
+  <p>
+    <label class="info">Billing degree</label> <%= (@period.billing_degree * 100).round %> %
+  </p>
+</fieldset>
 
 <hr style="clear:both"/>
 <br/>
