added class=regular to some tables, main menu color fix for I.E. Use Time.zone.day to set current day in calender instead of Date.today

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -7,7 +7,7 @@
 <p class="error"><%=h flash[:error] %></p>
 <p class="notice"><%=h flash[:notice] %></p>
 
-<table>
+<table class="regular">
   <tr>
     <th>Name</th><th>Show</th><th>Edit</th><th>Delete</th>
   </tr>
