Added search info and group totals for search results

--- a/app/views/month_reviews/calendar.html.erb
+++ b/app/views/month_reviews/calendar.html.erb
@@ -74,7 +74,7 @@
 </div>
 
 <br />
-<fieldset>
+<fieldset class="statistics">
   <legend>
     Statistics - <%= @period.balance_workdays ? "First #{@period.balance_workdays} working days" : @period.month_name  %>
   </legend>
