updated authlogic, added locale field to configuration and english/norwegian translation of billing and search reports (pdf)

--- a/app/views/configurations/edit.html.erb
+++ b/app/views/configurations/edit.html.erb
@@ -16,6 +16,10 @@
 	    <td>Work hours per day</td>
 	    <td><%= f.text_field :work_hours, :size => 6 %></td>
 	  </tr>
+	  <tr>
+	    <td>Report Language</td>
+	    <td><%= f.select(:locale, [["English","en"],["Norwegian","no-NB"]]) %></td>
+	  </tr>
 	</table>
 	<%= f.submit "Save" %>
 <% end -%>
