--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 			<div id="menu">
 				<% if defined? @current_user_session -%>
                     <span class="menu_item"><%= link_to "Time Entry", user_time_entries_path(@current_user.id), :class => "menu_link" %></span>
-					<span class="menu_item"><%= link_to "Review", user_month_review_path(@current_user, :id => :calendar), :class => "menu_link" %></span>
+					<span class="menu_item"><%= link_to "Review", user_month_review_path(@current_user), :class => "menu_link" %></span>
 					<% if @current_user.admin -%>
 						<span class="menu_item"><%= link_to "Reports", reports_path, :class => "menu_link" %></span>                                                
 						<span class="menu_item"><%= link_to "Admin", users_path, :class => "menu_link" %></span>
