replaced method of calculating week total due to bug #53

--- a/app/views/time_entries/_week_total.html.erb
+++ b/app/views/time_entries/_week_total.html.erb
@@ -1,2 +1,2 @@
 Week total <b><%= user.time_entries.between(date, (date + 6)).sum(:hours) %></b>
-Expected <b><%= Holiday.expected_hours_between( date, (date + 4)) %></b>
+Expected <b><%= (date.beginning_of_week..date.end_of_week).sum do |date| Holiday.expected_on_day(date) end %></b>
