added audit report in html and csv

--- a/app/views/reports/_sub_menu.html.erb
+++ b/app/views/reports/_sub_menu.html.erb
@@ -2,5 +2,6 @@
 <%=  link_to "Billing", :action => 'billing' %> |
 <%=  link_to "Customers", :action => 'customer' %> |
 <%=  link_to "Users", :action => 'user' %> |
+<%=  link_to "Audit", :action => 'audit' %> |
 <%=  link_to "Search", :action => 'search' %>
 </div>
