Addend link to audit from report index page + fixed a broken link

--- a/app/views/reports/audit.html.erb
+++ b/app/views/reports/audit.html.erb
@@ -52,7 +52,7 @@
     <br/>
     
     <%= submit_tag "Generate report" %>
-    <%= link_to "CSV format", :action => 'revisor', :format => 'csv',
+    <%= link_to "CSV format", :action => 'audit', :format => 'csv',
       :from_date=>@from_day, :to_date=>@to_day%>
 
   </div>
