--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -9,6 +9,7 @@
         <li><h3><%=  link_to "Billing", :action => 'billing' %></h3></li>
         <li><h3><%=  link_to "Customers", :action => 'customer' %></h3></li>
         <li><h3><%=  link_to "User Hours", :action => 'user' %></h3></li>
+        <li><h3><%=  link_to "Audit", :action => 'audit' %></h3></li>
         <li><h3><%=  link_to "Search", :action => 'search' %></h3></li>
       </ul>
     </td>
