Fixed some formatting errors that were introduced by upgrading the version of Prawn. Fixed incorrect link to month listing (details) from month_reviews/show.html.erb

--- a/app/views/month_reviews/show.html.erb
+++ b/app/views/month_reviews/show.html.erb
@@ -26,7 +26,7 @@
 
   <br/><br/>
 
-  <div style="text-align:right"><%= link_to 'View details', user_month_review_path(@user, :id => :listing, :calendar => @beginning_of_month) %> </div>
+  <div style="text-align:right"><%= link_to 'View details', user_month_listing_path(@user, :calendar => @beginning_of_month) %> </div>
   <br/>
 </div>
 
